--- a/index.html
+++ b/index.html
@@ -4,10 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css">
+    <title>Vizitka</title>
 </head>
 <body>
-    
+    <div class="grid">
+        <div class="col-8">
+            <h1>Jana Pavlíčková</h1>
+            <p>Je mi 23 let a aktuálně dokončuju na dálku magistra v oboru Business & Management na britské univerzitě.</p>
+            <p>Baví mě:
+                <ul>
+                    <li>zjišťovat jak věci vlastně fungujou</li>
+                    <li>chodit po horách</li>
+                    <li>tento kurz</li>
+                    <li>a další věci 💃</li>
+                </ul>
+            </p>
+            <p>Těším se na další lekce!</p>
+        </div>
+        <div class="col-4">
+            <img src="foto.jpg" alt="profilový obrázek" width="250px">
+        </div>
+    </div>
+    <div>
+        <h2>Kontakt</h2>
+        <a href="https://github.com/jPavlickova" target="_blank">GitHub</a>
+        <a href="mailto:pavlickovajj@gmail.com" target="_blank">E-mail</a>
+        <a href="https://www.facebook.com/jana.p.pavlickova/" target="_blank">Facebook</a>
+    </div>
 </body>
 </html>
 
